<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    tools:context=".RulesActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/rule1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:layout_below="@id/title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules2"
        android:layout_below="@id/rule1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>